fixing List.of references to use ImmutableList