@@ -63,6 +63,7 @@ import org.apache.beam.sdk.values.TypeDescriptors;
 import org.apache.beam.sdk.values.ValueInSingleWindow;
 import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.annotations.VisibleForTesting;
 import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.base.Strings;
+import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.collect.ImmutableList;
 import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.collect.ImmutableMap;
 import org.joda.time.Duration;
 
@@ -209,7 +210,7 @@ public class BigQueryStorageWriteApiSchemaTransformProvider
     public static Builder builder() {
       return new AutoValue_BigQueryStorageWriteApiSchemaTransformProvider_BigQueryStorageWriteApiSchemaTransformConfiguration
               .Builder()
-          .setUseCDCWritesWithTablePrimaryKey(List.of());
+          .setUseCDCWritesWithPrimaryKey(ImmutableList.of());
     }
 
     @SchemaFieldDescription(
@@ -263,7 +264,7 @@ public class BigQueryStorageWriteApiSchemaTransformProvider
         "This option enables the use of BigQuery CDC functionality. It expects a Row schema"
             + " wrapping the record to be inserted and adding the CDC info similar to:"
             + " {cdc_info: {mutation_type:\"...\", change_sequence_number:\"...\"}, record: {...}}")
-    public abstract List<String> getUseCDCWritesWithTablePrimaryKey();
+    public abstract List<String> getUseCDCWritesWithPrimaryKey();
 
     /** Builder for {@link BigQueryStorageWriteApiSchemaTransformConfiguration}. */
     @AutoValue.Builder
@@ -285,7 +286,7 @@ public class BigQueryStorageWriteApiSchemaTransformProvider
 
       public abstract Builder setErrorHandling(ErrorHandling errorHandling);
 
-      public abstract Builder setUseCDCWritesWithTablePrimaryKey(List<String> pkColumns);
+      public abstract Builder setUseCDCWritesWithPrimaryKey(List<String> pkColumns);
 
       /** Builds a {@link BigQueryStorageWriteApiSchemaTransformConfiguration} instance. */
       public abstract BigQueryStorageWriteApiSchemaTransformProvider
@@ -486,11 +487,11 @@ public class BigQueryStorageWriteApiSchemaTransformProvider
                 .to(new RowDynamicDestinations(schema.getField("record").getType().getRowSchema()))
                 .withFormatFunction(row -> BigQueryUtils.toTableRow(row.getRow("record")));
 
-        if (!configuration.getUseCDCWritesWithTablePrimaryKey().isEmpty()) {
+        if (!configuration.getUseCDCWritesWithPrimaryKey().isEmpty()) {
           write = validateAndIncludeCDCInformation(write, schema);
         }
       } else {
-        if (!configuration.getUseCDCWritesWithTablePrimaryKey().isEmpty()) {
+        if (!configuration.getUseCDCWritesWithPrimaryKey().isEmpty()) {
           write =
               validateAndIncludeCDCInformation(write, schema)
                   .withFormatFunction(row -> BigQueryUtils.toTableRow(row.getRow("record")));
@@ -538,7 +539,7 @@ public class BigQueryStorageWriteApiSchemaTransformProvider
           "When writing using CDC functionality, we expect a \"cdc_info\" field with Row Schema "
               + "with fields \"mutation_type\" and \"change_sequence_number\" of type string.");
       return write
-          .withPrimaryKey(configuration.getUseCDCWritesWithTablePrimaryKey())
+          .withPrimaryKey(configuration.getUseCDCWritesWithPrimaryKey())
           .withRowMutationInformationFn(
               row ->
                   RowMutationInformation.of(
